--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <li>Locate the HTML file in the downloaded folder</li>
         <li>Drag the file here, or…</li>
       </ol>
-      <p>…or open a file: <input type="file" accept="text/html" /></p>
+      <p>Open a file: <input type="file" accept="text/html" /></p>
     </div>
     </main>
   </body>
